--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -16,7 +16,7 @@ jobs:
         coq_version:
           - 'dev'
         ocaml_version:
-          - '4.09-flambda'
+          - 'minimal'
       # at most 20 concurrent jobs per free account:
       # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#usage-limits
       max-parallel: 4
