--- a/coq-relation-algebra.opam
+++ b/coq-relation-algebra.opam
@@ -2,14 +2,19 @@ opam-version: "2.0"
 synopsis: "Relation Algebra and KAT in Coq"
 name: "coq-relation-algebra"
 maintainer: "Damien Pous <Damien.Pous@ens-lyon.fr>"
+#TO SET BEFORE RELEASE
 version: "dev"
 homepage: "http://perso.ens-lyon.fr/damien.pous/ra/"
 dev-repo: "git+https://github.com/damien-pous/relation-algebra.git"
 bug-reports: "https://github.com/damien-pous/relation-algebra/issues"
-license: "LGPL"
+license: "LGPL-3.0-or-later"
 depends: [
   "ocaml"
+#TO SET BEFORE RELEASE
   "coq" {>= "8.11"}
+#TO REMOVE BEFORE RELEASE (TO MAKE THEM OPTIONAL)
+  "coq-mathcomp-ssreflect"
+  "coq-aac-tactics"
 ]
 depopts: [ "coq-mathcomp-ssreflect" "coq-aac-tactics" ]
 build: [
@@ -32,3 +37,10 @@ authors: [
   "Damien Pous <Damien.Pous@ens-lyon.fr>"
   "Christian Doczkal <christian.doczkal@ens-lyon.fr>"
 ]
+
+
+## CHECK BEFORE RELEASING:
+# CHANGELOG
+# README.md
+# webpage
+# above updates to the opam file in coq-opam-archive
