--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -15,7 +15,8 @@ jobs:
       matrix:
         image:
           - 'coqorg/coq:dev'
-          - 'coqorg/coq:8.13'
+# not yet, need coq-aac-tactics for 8.13
+#          - 'coqorg/coq:8.13'
       fail-fast: false
 
     steps:
