--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - v8.14
   pull_request:
     branches:
       - '**'
@@ -14,8 +15,8 @@ jobs:
     strategy:
       matrix:
         image:
-          - 'coqorg/coq:dev'
-          # - 'coqorg/coq:8.13'
+          # - 'coqorg/coq:dev'
+          - 'coqorg/coq:8.14'
       fail-fast: false
 
     steps:
