--- a/dune
+++ b/dune
@@ -32,7 +32,7 @@
 (library
  (name kat_reification)
  (public_name relation-algebra.kat_reification)
- (modules kat_dec kat_reification)
+ (modules kat_dec kat_reification g_kat_reification)
  (libraries ra_common))
 
 (coq.theory
