--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       matrix:
         image:
-          # - 'coqorg/coq:dev'
-          - 'coqorg/coq:8.15'
+          - 'coqorg/coq:dev'
+          # - 'coqorg/coq:8.15'
       fail-fast: false
 
     steps:
