--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - v8.15
+      - v8.16
   pull_request:
     branches:
       - '**'
@@ -16,7 +16,7 @@ jobs:
       matrix:
         image:
           - 'coqorg/coq:dev'
-          # - 'coqorg/coq:8.15'
+          - 'coqorg/coq:8.16'
       fail-fast: false
 
     steps:
