--- a/.github/workflows/build-relation-algebra.yml
+++ b/.github/workflows/build-relation-algebra.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - v8.20
+      - v9.0
   pull_request:
     branches:
       - '**'
@@ -16,7 +16,7 @@ jobs:
       matrix:
         image:
           - 'coqorg/coq:dev'
-          - 'coqorg/coq:8.20'
+          - 'rocq/rocq-prover:9.0-rc1'
       fail-fast: false
 
     steps:
