--- a/rocq-relation-algebra.opam
+++ b/rocq-relation-algebra.opam
@@ -1,6 +1,6 @@
 opam-version: "2.0"
 synopsis: "Relation Algebra and KAT in Rocq"
-name: "coq-relation-algebra"
+name: "rocq-relation-algebra"
 maintainer: "Damien Pous <Damien.Pous@ens-lyon.fr>"
 #TO SET BEFORE RELEASE
 version: "dev"
@@ -41,4 +41,4 @@ authors: [
 # CHANGELOG
 # README.md
 # webpage
-# above updates to the opam file in coq-opam-archive
+# above updates to the opam file in rocq-opam-archive
